add mock and few components on manager, schedule

--- a/src/pages/manager/manager.html
+++ b/src/pages/manager/manager.html
@@ -1,38 +1,33 @@
 <ion-header>
-	<ion-navbar>
+	<ion-navbar color="primary">
 		<ion-title>
 			Manager
 		</ion-title>
 	</ion-navbar>
 </ion-header>
 <ion-content>
-	<ion-card>
-		<ion-title>
-			Name
-		</ion-title>
-		<ion-card-content>
-			<p>Doctors: doctor1, doctor2</p>
-			<p>Assistant: assistant1, assistant2</p>
-			<p>Hospital/Clinic: Clinic1</p>
-		</ion-card-content>
-		<ion-row>
-			<ion-col>
-				<button ion-button icon-only clear>
-					<ion-icon name="construct"></ion-icon>
-				</button>
-			</ion-col>
-			<ion-col>
-				<button ion-button icon-only clear>
+	<ion-list >
+		<ion-item-sliding>
+			<button ion-item (click)="go()">
+
+				<h2>1. Name of Group</h2>
+				<p>Doctors: doctor1, doctor2</p>
+				<p>Assistant: assistant1, assistant2</p>
+				<p>Hospital/Clinic: Clinic1</p>
+			</button>
+			<ion-item-options side="left">
+			<button ion-button color="danger">
 					<ion-icon name="trash"></ion-icon>
+					Delete
 				</button>
-			</ion-col>
-			<ion-col>
-				<button ion-button icon-only  clear (click)="go()">
-					<ion-icon name="arrow-forward"></ion-icon>
+				<button ion-button color="secondary">
+					<ion-icon name="md-create"></ion-icon>
+					Edit
 				</button>
-			</ion-col>
-		</ion-row>
-	</ion-card>
+			</ion-item-options>
+		</ion-item-sliding>
+	</ion-list>
+	
 	<ion-fab bottom right>
 		<button ion-fab><ion-icon name="add"></ion-icon></button>
 	</ion-fab>
