--- a/src/pages/patient/patient.html
+++ b/src/pages/patient/patient.html
@@ -1,12 +1,18 @@
 <ion-header>
 	<ion-navbar color="primary">
 		<button ion-button menuToggle>
-	      <ion-icon name="menu"></ion-icon>
-	    </button>
+			<ion-icon name="menu"></ion-icon>
+		</button>
 		<ion-title>
 			Patient
 		</ion-title>
 	</ion-navbar>
 </ion-header>
 <ion-content>
+	<ion-searchbar ></ion-searchbar>
+	<ion-list>
+		<button ion-item >
+			<h3>1. Name of Patient</h3>
+		</button>
+	</ion-list>
 </ion-content>
