--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,22 +1,30 @@
 <ion-menu [content]="sideMenu">
-  <ion-header>
+  <ion-header color="primary">
     <ion-toolbar>
       <ion-title>Pages</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-content>
     <ion-list>
-      <button ion-item (click)="openPage(loginPage)">
-        Login
+      <img src="https://tribzap2it.files.wordpress.com/2015/10/ken-jeong-dr-ken-abc.jpg">
+      <button ion-item (click)="openManager()">
+        Account
       </button>
-      <button ion-item (click)="openPage(signupPage)">
-        Signup
+      <button ion-item (click)="openManager()">
+        Change Group
+      </button>
+      <button ion-item (click)="openManager()">
+        Settings
+      </button>
+      <button ion-item (click)="logout()">
+        Log-out
       </button>
     </ion-list>
   </ion-content>
 </ion-menu>
 <ion-tabs #sideMenu>
-  <ion-tab [root]="tab1Root" tabTitle="Schedule" tabIcon="time"></ion-tab>
-  <ion-tab [root]="tab2Root" tabTitle="Patient" tabIcon="pulse"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Chat" tabIcon="people"></ion-tab>
+  <ion-tab [root]="notification" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
+  <ion-tab [root]="schedule" tabTitle="Schedule" tabIcon="time"></ion-tab>
+  <ion-tab [root]="patient" tabTitle="Patient" tabIcon="body"></ion-tab>
+  <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatbubbles"></ion-tab>
 </ion-tabs>
