add black and gold theme, add submenu for FAB, redesign schedule

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,19 +1,18 @@
-<ion-content padding>
-	<form #form="ngForm" (submit)="login()">
+<ion-content>
+	<img class="logo" src="assets/img/logo.jpg">
+		<form #form="ngForm" (submit)="login()">
 		<ion-list no-lines>
+			
 			<ion-item>
-				<h1>Welcome to Asclepius</h1>
-			</ion-item>
-			<ion-item>
-				<ion-label floating>Username</ion-label>
+				<ion-label in-line>Username</ion-label>
 				<ion-input type="text"></ion-input>
 			</ion-item>
 
 			<ion-item>
-				<ion-label floating>Password</ion-label>
+				<ion-label  in-line>Password</ion-label>
 				<ion-input type="password"></ion-input>
 			</ion-item>
 		</ion-list>
-		<button ion-button block color="primary"> Login </button>
+		<button ion-button round block big color="accent"> Login </button>
 	</form>
 </ion-content>
