--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -37,7 +37,9 @@
 	</ion-grid>
 </ion-content>
 <ion-footer>
+	<ion-toolbar color="primary-light">
 	<form class="form-inline">
-	<ion-input></ion-input> <button ion-button clear icon-only><ion-icon name="send"></ion-icon></button>
+	<ion-input placholder="Type a message"></ion-input> <button ion-button clear icon-only><ion-icon name="send"></ion-icon></button>
 	</form>
+	</ion-toolbar>
 </ion-footer>
