--- a/src/pages/manager/manager.html
+++ b/src/pages/manager/manager.html
@@ -28,6 +28,11 @@
 	</ion-list>
 	
 	<ion-fab bottom right>
-		<button ion-fab><ion-icon name="add"></ion-icon></button>
+		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
+		 <ion-fab-list side="left">
+	      <button color="accent-light" ion-fab><ion-icon name="person-add"></ion-icon></button>
+	      <button color="accent-light" ion-fab><ion-icon name="search"></ion-icon>
+	      </button>
+	    </ion-fab-list>
 	</ion-fab>
 </ion-content>
