add black and gold theme, add submenu for FAB, redesign schedule

--- a/src/pages/patient/patient.html
+++ b/src/pages/patient/patient.html
@@ -15,4 +15,7 @@
 			<h3>1. Name of Patient</h3>
 		</button>
 	</ion-list>
+	<ion-fab bottom right>
+		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
+	</ion-fab>
 </ion-content>
