adjusted color spectrum especially dark to emphasize tabs button

--- a/src/pages/chat/chat.html
+++ b/src/pages/chat/chat.html
@@ -10,9 +10,9 @@
 </ion-header>
 <ion-content>
 	<ion-grid>
-		<ion-row>
+		<ion-row >
 			<ion-col offset-10 width-90>
-				<ion-card >
+				<ion-card class="chat-me">
 					<ion-card-header>
 						Me
 					</ion-card-header>
@@ -24,7 +24,7 @@
 		</ion-row>
 		<ion-row>
 			<ion-col width-90>
-				<ion-card>
+				<ion-card class="chat-other">
 					<ion-card-header>
 						Assistant2
 					</ion-card-header>
@@ -37,7 +37,7 @@
 	</ion-grid>
 </ion-content>
 <ion-footer>
-	<ion-toolbar color="primary-light">
+	<ion-toolbar color="secondary">
 	<form class="form-inline">
 	<ion-input placholder="Type a message"></ion-input> <button ion-button clear icon-only><ion-icon name="send"></ion-icon></button>
 	</form>
