--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -23,7 +23,7 @@
 </ion-menu>
 <ion-tabs #sideMenu>
   <ion-tab [root]="notification" tabTitle="Notifications" tabIcon="notifications"></ion-tab>
-  <ion-tab [root]="schedule" tabTitle="Schedule" tabIcon="time" color="accent"></ion-tab>
-  <ion-tab [root]="patient" tabTitle="Patient" tabIcon="body" color="accent"></ion-tab>
-  <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatbubbles" color="accent"></ion-tab>
+  <ion-tab [root]="schedule" tabTitle="Schedule" tabIcon="time" color="accent-dark"></ion-tab>
+  <ion-tab [root]="patient" tabTitle="Patient" tabIcon="body" color="accent-dark"></ion-tab>
+  <ion-tab [root]="chat" tabTitle="Chat" tabIcon="chatbubbles" color="accent-dark"></ion-tab>
 </ion-tabs>
