registration page; change-password, upload photo, update profile designs, profile page.

--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,8 +1,7 @@
 <ion-content>
-	<img class="logo" src="assets/img/logo.jpg">
-		<form #form="ngForm" (submit)="login()">
+	<img class="logo" src="assets/img/logo.jpg"/>
+	<form #form="ngForm" (submit)="login()">
 		<ion-list no-lines>
-			
 			<ion-item>
 				<ion-label in-line>Username</ion-label>
 				<ion-input type="text"></ion-input>
