--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -2,7 +2,7 @@
   <ion-content>
     <ion-list>
       <img src="https://tribzap2it.files.wordpress.com/2015/10/ken-jeong-dr-ken-abc.jpg">
-      <button ion-item (click)="openManager()" color="secondary">
+      <button ion-item (click)="openProfile()" color="secondary">
         <ion-icon name="contact"></ion-icon>
         Account
       </button>
