--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -5,20 +5,28 @@
 		</ion-title>
 	</ion-navbar>
 	<div class="flow-nav">
-		<div class="checklist " [ngClass]="{'active':step == 1}">	
+		<div class="checklist " [ngClass]="{'active':step == 1}">
+			<ion-label>	
 			Update Password
+			</ion-label>
 		<div class="registration-arrow"></div>
 		</div>
 		<div class="checklist" [ngClass]="{'active':step == 2}">
+			<ion-label>
 			Update Profile
+			</ion-label>
 		<div class="registration-arrow"></div>
 		</div>
 		<div class="checklist" [ngClass]="{'active':step == 3}">
+			<ion-label>
 			Update Photo
+			</ion-label>
 		<div class="registration-arrow"></div>
 		</div>
 		<div class="checklist" [ngClass]="{'active':step == 4}">
+			<ion-label>
 			Assistant
+			</ion-label>
 		<div class="registration-arrow"></div>
 		</div>
 	</div>
