--- a/src/pages/change-password/form/change-password-form.html
+++ b/src/pages/change-password/form/change-password-form.html
@@ -10,6 +10,6 @@
 			<ion-input type="password"></ion-input>
 		  </ion-item>
 		</ion-list>
-		<button ion-button round block big color="accent"> Change Password </button>
+		<button ion-button round large color="accent"> Change Password </button>
 	</form>
 </ion-content>
