--- a/src/pages/profile/form/profile-form.html
+++ b/src/pages/profile/form/profile-form.html
@@ -39,6 +39,6 @@
 				<ion-input></ion-input>
 			</ion-item>
 		</ion-list>
-		<button ion-button round block big color="accent">Submit</button>
+		<button ion-button round large color="accent">Submit</button>
 	</form>
 </ion-content>
