initial assistant manager page; e2e process for registration and navigation to group manager

--- a/src/pages/profile/upload-photo/upload-photo.html
+++ b/src/pages/profile/upload-photo/upload-photo.html
@@ -17,6 +17,7 @@
 		</ion-row>
 		<img [src]="image" *ngIf="image">
 	</div>
-	<button ion-button round large color="danger">Clear</button>
-	<button ion-button round large color="accent">Submit</button>
+	<button ion-button round large color="accent"
+	(click)="submit()">Submit</button>
+	<button ion-button round large outline color="accent" (click)="clear()">Clear</button>
 </ion-content>
