--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -34,3 +34,6 @@
 <ion-content>
 <ion-nav [root]="root" [rootParams]="params"></ion-nav>
 </ion-content>
+<ion-footer *ngIf="step==4">
+	<button ion-button full color="secondary" (click)="done()">DONE</button>
+</ion-footer>
