--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -28,7 +28,7 @@
 </ion-header>
 <ion-content>
 	<ion-tabs tabsPlacement="top">
-	  <ion-tab [root]="blank" tabTitle="Information" tabIcon="information-circle"></ion-tab>
-	  <ion-tab [root]="blank" tabTitle="Assistant" tabIcon="people" color="accent-dark"></ion-tab>
+	  <ion-tab [root]="form" tabTitle="Information" tabIcon="information-circle"></ion-tab>
+	  <ion-tab [root]="assistant" tabTitle="Assistant" tabIcon="people" color="accent-dark"></ion-tab>
 	</ion-tabs>
 </ion-content>
