refactored change password form

--- a/src/pages/change-password/change-password.html
+++ b/src/pages/change-password/change-password.html
@@ -6,5 +6,5 @@
 	</ion-navbar>
 </ion-header>
 <ion-content>
-	<change-password-form [parentNav]="nav"></change-password-form>
+	<change-password-form></change-password-form>
 </ion-content>
