--- a/src/pages/profile/upload-photo/upload-photo.html
+++ b/src/pages/profile/upload-photo/upload-photo.html
@@ -18,5 +18,5 @@
 		<img [src]="image" *ngIf="image">
 	</div>
 	<button ion-button round large color="danger">Clear</button>
-	<button ion-button round large color="accent">Submit</button>
+	<button ion-button round large color="accent" (click)="submit()">Submit</button>
 </ion-content>
