drawing-pad now rending diagram image

--- a/src/pages/schedule/schedule.html
+++ b/src/pages/schedule/schedule.html
@@ -53,8 +53,8 @@
 				</button>
 			</ion-col>
 			<ion-col width-md-20>
-				<button ion-button icon-only  clear full>
-					<ion-icon name="list" color="accent" (click)="toggleReOrder()"></ion-icon>
+				<button ion-button icon-only  clear full (click)="toggleReOrder()">
+					<ion-icon name="list" color="accent" ></ion-icon>
 					Re-Order
 				</button>
 			</ion-col>
