adjusted form validation

--- a/src/pages/assistant-manager/assistant-manager.html
+++ b/src/pages/assistant-manager/assistant-manager.html
@@ -2,11 +2,13 @@
 	<h3>Number of Available Assitant Account: {{ allowableAssistants }}</h3>
 	<ion-list>
 		<ion-item-sliding>
-			<ion-item *ngFor="let a of assistants" no-lines>
+			<ion-item *ngFor="let a of assistants">
 				<ion-avatar item-left>
 					<img src="https://tribzap2it.files.wordpress.com/2015/10/ken-jeong-dr-ken-abc.jpg">
 				</ion-avatar>
-				<h2>{{ a }}</h2>
+				<h2>{{ a.fullName }}</h2>
+				<h2>{{ a.email }}</h2>
+				<h2>{{ a.password }}</h2>
 			</ion-item>
 			<ion-item-options side="right">
 				<button ion-button color="accent-light">
@@ -34,7 +36,7 @@
 		</ion-item>
 	</ion-list>-->
 	<ion-fab bottom right>
-		<button ion-fab color="accent"><ion-icon name="add"></ion-icon></button>
+		<button ion-fab color="accent" [disabled]="allowableAssistants === 0"><ion-icon name="add"></ion-icon></button>
 		<ion-fab-list side="left">
 			<button color="accent-light" ion-fab (click)="addAssistant()"><ion-icon name="person-add"></ion-icon></button>
 			<button color="accent-light" ion-fab (click)="searchAssistant()"><ion-icon name="search"></ion-icon>
