--- a/src/pages/assistant-manager/add-assistant/add-assistant.html
+++ b/src/pages/assistant-manager/add-assistant/add-assistant.html
@@ -1,2 +1,2 @@
-<profile-form (onSubmit)="submit($event)">
+<profile-form (onSubmit)="submit($event)" [formTitle]="'Add Assistant'">
 </profile-form>
