--- a/src/pages/registration/step-two/step-two.html
+++ b/src/pages/registration/step-two/step-two.html
@@ -1,1 +1,1 @@
-<profile-form (onSubmit)="submit($event)"></profile-form>
+<profile-form (onSubmit)="submit($event)"  [formType]="formType"></profile-form>
