created mock search assistant. fixed components content. initial assistant list option buttons

--- a/src/pages/registration/step-one/step-one.html
+++ b/src/pages/registration/step-one/step-one.html
@@ -1,2 +1,4 @@
-<change-password-form (onSubmit)="changePassword($event)">
-</change-password-form>
+<ion-content #Content padding>
+    <change-password-form (onSubmit)="changePassword($event)">
+    </change-password-form>
+</ion-content>
