--- a/src/pages/registration/step-two/step-two.html
+++ b/src/pages/registration/step-two/step-two.html
@@ -1,1 +1,3 @@
-<profile-form (onSubmit)="submit($event)"  [formType]="formType"></profile-form>
+<ion-content #Content padding>
+    <profile-form (onSubmit)="submit($event)" [formType]="formType"></profile-form>
+</ion-content>
