--- a/src/pages/assistant-manager/add-assistant/add-assistant.html
+++ b/src/pages/assistant-manager/add-assistant/add-assistant.html
@@ -1,2 +1,11 @@
-<profile-form (onSubmit)="submit($event)" [formTitle]="'Add Assistant'">
-</profile-form>
+<ion-header>
+    <ion-navbar color="primary">
+        <ion-title>
+            Add Assistant
+        </ion-title>
+    </ion-navbar>
+</ion-header>
+<ion-content #Content padding>
+    <profile-form (onSubmit)="submit($event)">
+    </profile-form>
+</ion-content>
