adjusted assistant manager page behavior

--- a/src/pages/assistant-manager/assistant/assistant.html
+++ b/src/pages/assistant-manager/assistant/assistant.html
@@ -6,6 +6,6 @@
     </ion-navbar>
 </ion-header>
 <ion-content #Content padding>
-    <profile-form (onSubmit)="submit($event)" [profile]="profile" [mode]="mode">
+    <profile-form (onSubmit)="submit($event)" [profile]="profile" [mode]="mode" [usage]="'account'">
     </profile-form>
 </ion-content>
