--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -6,16 +6,21 @@
 		<ion-list no-lines>
 			<ion-label><ion-icon name="person"></ion-icon>Username</ion-label>
 			<ion-item round>
-				<ion-input type="text" [(ngModel)]="username" name="username"></ion-input>
+				<ion-input type="text" [(ngModel)]="form.username" name="username"></ion-input>
 			</ion-item>
 
 			<ion-label ><ion-icon name="lock"></ion-icon>Password</ion-label>
 			<ion-item round>
-				<ion-input type="password" [(ngModel)]="password" name="password"></ion-input>
+				<ion-input type="password" [(ngModel)]="form.password" name="password"></ion-input>
 			</ion-item>
 		</ion-list>
 		<div center>
-			<button ion-button round large color="accent"> Login </button>
+			<xhr-button wd-md round large color="accent"
+			[submitSubscriber]="submitEmitter"
+			[parameter]="form.value"
+			[observableFn]="submitObservable"
+			(onSuccess)="onSuccess($event)"
+			> Login </xhr-button>
 		</div>
 	</form>
 </ion-content>
