up ionic version to 2.3.0; apply xhr on change password; set profile details to responsive tablet and phone design

--- a/src/pages/registration/step-one/step-one.html
+++ b/src/pages/registration/step-one/step-one.html
@@ -1,4 +1,4 @@
 <ion-content #Content padding>
-    <change-password-form (onSubmit)="changePassword($event)">
+    <change-password-form (onSuccess)="moveToNext($event)">
     </change-password-form>
 </ion-content>
