--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -2,7 +2,7 @@
 	<div center>
 		<img class="logo" src="assets/img/logo.jpg"/>
 	</div>
-	<form #form="ngForm" (submit)="login()">
+	<form #form="ngForm" (submit)="login(xhr)">
 		<ion-list no-lines>
 			<ion-label><ion-icon name="person"></ion-icon>Username</ion-label>
 			<ion-item round>
@@ -15,7 +15,7 @@
 			</ion-item>
 		</ion-list>
 		<div center>
-			<xhr-button wd-md round large color="accent"
+			<xhr-button #xhr wd-md round large color="accent"
 			[disabled]="form.invalid"> Login </xhr-button>
 		</div>
 	</form>
