fixed profile form submit button visibility. implemented clinic manager page

--- a/src/pages/registration/registration.html
+++ b/src/pages/registration/registration.html
@@ -25,7 +25,7 @@
 		</div>
 		<div class="checklist" [ngClass]="{'active':step == 4}" *ngIf="isDoctor()">
 			<ion-label>
-				Assistant
+				Clinics
 			</ion-label>
 			<div class="registration-arrow"></div>
 		</div>
