clinic sched modal

--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -48,43 +48,9 @@
                         </ion-col>
                     </ion-row>
 
-                    <div formArrayName="schedules">
-                        <ion-row *ngFor="let schedule of clinicForm.get('schedules').controls; let i=index">
-                            <div class="schedule-list" [formGroupName]="i">
-                                <ion-row>
-                                    <ion-col col-md-6>
-                                        <ion-label class="form-label h1">Day <span *ngIf="isEditMode()">*</span></ion-label>
-                                        <ion-item round>
-                                            <ion-select class="options" name="day" formControlName="day">
-                                                <ion-option *ngFor="let d of days" value="{{ d?.code }}">{{ d?.description }}</ion-option>
-                                            </ion-select>
-                                        </ion-item>
-                                        <div class="error-message" *ngIf="schedule.get('day')?.dirty &&  schedule.get('day').invalid">
-                                            {{ errors.doctorType }}
-                                        </div>
-                                    </ion-col>
-                                    <ion-col col-md-6>
-                                        <ion-row>
-                                            <ion-label class="form-label h1">From <span *ngIf="isEditMode()">*</span></ion-label>
-                                        </ion-row>
-                                        <ion-row>
-                                            <ion-item round>
-                                                <ion-input type="time" name="from" formControlName="from" [disabled]="!isEditMode()"></ion-input>
-                                            </ion-item>
-                                        </ion-row>
-                                        <ion-row>
-                                            <ion-label class="form-label h1">To <span *ngIf="isEditMode()">*</span></ion-label>
-                                        </ion-row>
-                                        <ion-row>
-                                            <ion-item round>
-                                                <ion-input type="time" name="to" formControlName="to" [disabled]="!isEditMode()"></ion-input>
-                                            </ion-item>
-                                        </ion-row>
-                                    </ion-col>
-                                </ion-row>
-                            </div>
-                        </ion-row>
-                    </div>
+                    <ion-row *ngFor="let schedule of schedules; let i=index">
+                        {{ schedule.day }} : {{ schedule.from }} to {{ schedule.to }}
+                    </ion-row>
 
                 </ion-grid>
             </div>
