--- a/src/pages/registration/step-two/step-two.html
+++ b/src/pages/registration/step-two/step-two.html
@@ -1,3 +1,3 @@
 <ion-content #Content padding>
-    <profile-form (onSubmit)="submit($event)" [formType]="formType"></profile-form>
+    <profile-form (onSubmit)="moveToNext($event)" [formType]="formType"></profile-form>
 </ion-content>
