--- a/src/pages/clinic-manager/schedule-modal/schedule-modal.html
+++ b/src/pages/clinic-manager/schedule-modal/schedule-modal.html
@@ -19,7 +19,7 @@
                         </ion-select>
                     </ion-item>
                     <div class="error-message" *ngIf="scheduleForm.get('day').dirty &&  scheduleForm.get('day').invalid">
-                        {{ errors.doctorType }}
+                        {{ errors.day }}
                     </div>
                     <ion-label class="form-label h1">From *</ion-label>
                     <ion-item round>
