clinic sched layout

--- a/src/pages/clinic-manager/clinic/clinic.html
+++ b/src/pages/clinic-manager/clinic/clinic.html
@@ -43,7 +43,7 @@
                             <ion-label class="form-label h1">Schedule <span *ngIf="isEditMode()">*</span></ion-label>
                         </ion-col>
                         <ion-col col-md-6 *ngIf="isEditMode()">
-                            <a (click)="createSchedule()" color="accent">
+                            <a class="form-label h1" (click)="createSchedule()" color="accent">
                                 <ion-icon name="add"></ion-icon> Add Schedule</a>
                         </ion-col>
                     </ion-row>
